services/bluegreen/service_blue.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: myapp
    version: "1.0"
  ports:
  - name: http
    port: 8080
    targetPort: 80
  type: LoadBalancer
