services/bluegreen/service_green.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: myapp
    version: "2.0"
  ports:
  - name: http
    port: 8080
    targetPort: 80
  type: LoadBalancer
