services/bluegreen/ingress_rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /home
        pathType: Exact
        backend:
          service:
            name: my-app-service # to tally with service name
            port:
              number: 8080
